<resources>
    <string name="version">Daily Drops v1.0</string>
    <string name="app_name">Daily Drops</string>
    <string name="DropTitle">Title *</string>
    <string name="DropNote">Note</string>
    <string name="DropDate">Date *</string>
    <string name="ViewAll">View all</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="logo">DailyDrops logo</string>
    <string name="dialog_image_options">Select Image Option</string>
    <string-array name="image_options">
        <item>Choose photo from gallery</item>
        <item>Take picture with camera</item>
    </string-array>
    <string name="dialog_delete_options">Delete Drop?</string>
    <string-array name="delete_options">
        <item>Confirm</item>
        <item>Cancel</item>
    </string-array>
    <string name="searchLabel">Search term: </string>
    <string name="errorTitleCharacterLimit">Title exceeds maximum character limit</string>
    <string name="errorTitleEmpty">Title can not be empty</string>
    <string name="errorNoteCharacterLimit">Note exceeds maximum character limit</string>
    <string name="errorDateEmpty">Date can not be empty</string>
    <string name="errorInvalidDate">Date already passed</string>
    <string name="addDrop">ADD DROP</string>
    <string name="saveDrop">SAVE DROP</string>
    <string name="no_image_selected">No image selected..</string>
    <string name="newDrop">New drop</string>
    <string name="editDrop">Edit drop</string>
    <string name="dailyDrops">Daily Drops</string>
    <string name="drawerClose">Close drawer</string>
    <string name="drawerOpen">Open drawer</string>
    <string name="drops">Drops</string>
    <string name="myCollection">My Collection</string>
    <string name="hot">Hot</string>
    <string name="other">Other</string>
    <string name="contact">Contact</string>
    <string name="statistics">Statistics</string>
    <string name="barChartTitle">Drops per day (over 14 days)</string>
    <string name="emailAddress">jegbol01@gmail.com</string>
    <string name="backButton">Back button</string>
    <string name="addImage">Add image</string>
    <string name="removeImage">Remove image</string>
    <string name="searchTerm">Search...</string>
    <string name="showServerDrops">Show server drops</string>
    <string name="showYourDrops">Show my drops</string>
    <string name="search">Search</string>
    <string name="searchTermInfo">Search term:</string>
    <string name="undoSearchCriteria">Undo search criteria</string>
    <string name="noResultsFound">No results found..</string>
    <string name="likeDrop">Like drop</string>
    <string name="num0">0</string>
    <string name="dropImage">Drop image</string>
    <string name="datePlaceholder">%DATE%</string>
    <string name="titlePlaceholder">%TITLE%</string>
    <string name="notePlaceholder">%NOTE%</string>
    <string name="deleteDrop">Delete drop</string>
    <string name="time">Time</string>
    <string name="timePlaceholder">%TIME%</string>
    <string name="kismetprint">KISMETPRINT</string>
    <string name="kismetprintURL">https://www.etsy.com/shop/KISMETPRINT</string>
    <string name="forCreatingTheLogo">for creating the logo</string>
    <string name="specialThanksTo">Special thanks to</string>
    <string name="myEmail">jegbol01@gmail.com</string>
    <string name="jeroenBol">Jeroen Bol</string>
    <string name="getInTouch">Get in Touch</string>
    <string name="personIcon">Person icon</string>
    <string name="emailIcon">Email Icon</string>
    <string name="about">About</string>
    <string name="copyright">\@ 2020 Jeroen Bol</string>
    <string name="picassoLicense">Copyright 2013 Square, Inc.\n \n Licensed under the Apache License, Version 2.0 (the License);\n you may not use this file except in compliance with the License.\n You may obtain a copy of the License at\n \n http://www.apache.org/licenses/LICENSE-2.0\n \n Unless required by applicable law or agreed to in writing, software\n distributed under the License is distributed on an AS ISBASIS,\n WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n See the License for the specific language governing permissions and\n limitations under the License.\n</string>
    <string name="picasso">Picasso</string>
    <string name="licenseHeader">This app uses the following open-source libraries:</string>
    <string name="wantToContactUs">Want to contact us? Feel free to send a message!</string>
    <string name="mpaAndroidChartLicense">Copyright 2020 Philipp Jahoda\n \n Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n \n http://www.apache.org/licenses/LICENSE-2.0\n \n Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS ISBASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n</string>
    <string name="mpAndroidChart">MPAndroidChart</string>
    <string name="sandrioscamera">sandriosCamera</string>
    <string name="sandriosCameraLicense">MIT License\n \n Copyright (c) 2016 sandrios studios\n \n Permission is hereby granted, free of charge, to any person obtaining a copy\n of this software and associated documentation files (the Software), to deal\n in the Software without restriction, including without limitation the rights\n to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n copies of the Software, and to permit persons to whom the Software is\n furnished to do so, subject to the following conditions:\n \n The above copyright notice and this permission notice shall be included in all\n copies or substantial portions of the Software.\n \n THE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n SOFTWARE.\n</string>
    <string name="gsonLicense">Copyright 2008 Google Inc.\n \n Licensed under the Apache License, Version 2.0 (the License);\n you may not use this file except in compliance with the License.\n You may obtain a copy of the License at\n \n http://www.apache.org/licenses/LICENSE-2.0\n \n Unless required by applicable law or agreed to in writing, software\n distributed under the License is distributed on an AS ISBASIS,\n WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n See the License for the specific language governing permissions and\n limitations under the License.\n</string>
    <string name="gson">GSON</string>

</resources>