<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPink"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/about"
            android:textColor="@color/colorPink"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="36dp"
            android:layout_height="27dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp"
            app:tint="@color/colorPink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_left_black_24dp"
            android:contentDescription="@string/backButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_about_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/roboto_medium"
                    android:foregroundTint="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/version"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_about_header"
                    tools:layout_editor_absoluteX="0dp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/wantToContactUs"
                        android:textColor="@color/dark"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    tools:layout_editor_absoluteX="0dp">

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/person_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/personIcon"
                            app:srcCompat="@drawable/ic_person_black_24dp"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:text="@string/jeroenBol"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/email_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/emailIcon"
                            app:srcCompat="@drawable/ic_email_black_24dp"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:text="@string/myEmail"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    tools:layout_editor_absoluteX="16dp">

                    <TextView
                        android:id="@+id/tv_credits_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/roboto"
                        android:foregroundTint="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/specialThanksTo"
                        android:textColor="#272727"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/kismetprint"
                            android:textColor="@color/colorPrimary"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autoLink="web"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/kismetprintURL"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_credits_header2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/roboto_light"
                        android:foregroundTint="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/forCreatingTheLogo"
                        android:textColor="#424242"
                        android:textSize="19sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:text="@string/licenseHeader"
                        android:textColor="@color/dark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/picasso"
                            android:textColor="@color/dark"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/picassoLicense" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mpAndroidChart"
                            android:textColor="@color/dark"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/mpaAndroidChartLicense" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sandrioscamera"
                            android:textColor="@color/dark"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/sandriosCameraLicense" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gson"
                            android:textColor="@color/dark"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/gsonLicense" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>