<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPink"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/info"
            android:textColor="@color/colorPink"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="36dp"
            android:layout_height="27dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp"
            app:tint="@color/colorPink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            app:srcCompat="@drawable/ic_left_black_24dp"
            android:contentDescription="@string/backButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_contact_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:foregroundTint="#FFFFFF"
                android:gravity="center"
                android:text="@string/getInTouch"
                android:textColor="#000000"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/person_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_person_black_24dp"
                    app:tint="@color/colorPrimary"
                    android:contentDescription="@string/personIcon" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/jeroenBol"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_email_black_24dp"
                    app:tint="@color/colorPrimary"
                    android:contentDescription="@string/emailIcon" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/myEmail"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_credits_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/roboto"
                android:foregroundTint="#FFFFFF"
                android:gravity="center"
                android:text="@string/specialThanksTo"
                android:textColor="#272727"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/kismetprint"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoLink="web"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/kismetprintURL"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_credits_header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_light"
                android:foregroundTint="#FFFFFF"
                android:gravity="center"
                android:text="@string/forCreatingTheLogo"
                android:textColor="#424242"
                android:textSize="19sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>